# rag_information_extractor

./: .gitignore  README.md  config.yaml  project_structure.txt  pyproject.toml  requirements.txt  run_apis.sh  run_doc_ingestion.sh  run_extraction.sh
.rough_work/: embedding_server.py  experiments.ipynb  test.py
apis/: embedding_api.py  pruner_api.py  re_ranker_api.py
evaluations/: aggregate_eval_overall.py  eval_generation.py  eval_overall.py  run_find_raw_chunks_ids.py  run_match_pred_output_llm.py  run_match_pred_rag_QA_llm.py
evaluations/utils/: eval_accuracy.py  eval_context_PR.py  eval_runtime.py  find_raw_chunks_ids.py  load_aziende_data_dicts.py  match_pred_output_llm.py  match_pred_rag_QA_llm.py  text_simplifier.py
outputs/temp/custom_chunks/: 2025-11-28 09-56-29.json  output.json
scripts/: extract_info.py  ingest_docs.py  output_temp  rag_pipeline.py  run_extract_info.py  run_ingest_docs.py
src/rag_info_extractor/: common_logging.py  extract_info.py  llm_connector.py  rag_pipeline.py
src/rag_info_extractor/document_ingestion/: custom_chunking.py  fixed_size_chunking.py  ingest_docs.py  load_docs.py  output_temp  (+1 more)
tests/: eval_generation.py  eval_overall.py
tests/Information_Extractor/: Problems and Remarks.txt
tests/full_script_run_tests/: output_temp.txt  run_rag_pipeline.py
tests/unit_tests/: test_extract_info.py
tests/utils/: eval_accuracy.py  eval_context_PR.py  eval_runtime.py  find_raw_chunks_ids.py  load_aziende_data_dicts.py  match_pred_ouput_llm.py  match_pred_output_llm.py  match_pred_rag_QA_llm.py  text_simplifier.py
(+40 files in other folders)
